--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "request-promise": "^4.1.1",
     "restify": "^4.3.0",
     "swagger-client": "^2.1.32"
+  },
+  "engines": {
+    "node": "^7.5.0",
+    "npm": "^4.1.2"
   }
 }
